force-app/main/default/objects/Dashboard_Config__c/Dashboard_Config__c.object-meta.xml
<CustomObject>
    <description>White-label branding and section configuration for the onboarding dashboard. One record per brand (Citi, Citizens, ICE, etc.).</description>
    <label>Dashboard Config</label>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dashboard Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>