force-app/main/default/objects/Dashboard_Config__c/fields/Accent_Color__c.field-meta.xml
<CustomField>
    <fullName>Accent_Color__c</fullName>
    <label>Accent Color (hex)</label>
    <type>Text</type>
    <length>9</length>
    <description>Accent color for highlights, progress, and CTAs.</description>
</CustomField>