force-app/main/default/objects/Dashboard_Config__c/fields/Dashboard_Title__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Title__c</fullName>
    <label>Dashboard Title</label>
    <type>Text</type>
    <length>120</length>
    <description>The title shown at the top of the dashboard.</description>
</CustomField>