force-app/main/default/objects/Dashboard_Config__c/fields/Details_Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Details_Section_Label__c</fullName>
    <label>Details Section Label</label>
    <type>Text</type>
    <length>120</length>
</CustomField>