force-app/main/default/objects/Dashboard_Config__c/fields/Header_Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Header_Section_Label__c</fullName>
    <label>Header Section Label</label>
    <type>Text</type>
    <length>120</length>
</CustomField>