force-app/main/default/objects/Dashboard_Config__c/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <label>Is Internal View</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>If true, shows internal notes and procedures. If false (Experience Cloud), hides internal-only content.</description>
</CustomField>