force-app/main/default/objects/Dashboard_Config__c/fields/Items_Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Items_Section_Label__c</fullName>
    <label>Items Section Label</label>
    <type>Text</type>
    <length>120</length>
</CustomField>