force-app/main/default/objects/Dashboard_Config__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <label>Logo URL</label>
    <type>Url</type>
    <description>URL of the brand logo displayed in the dashboard header.</description>
</CustomField>