force-app/main/default/objects/Dashboard_Config__c/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <label>Primary Color (hex)</label>
    <type>Text</type>
    <length>9</length>
    <description>Primary brand color, e.g. #003B70.</description>
</CustomField>