force-app/main/default/objects/Dashboard_Config__c/fields/Progress_Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Progress_Section_Label__c</fullName>
    <label>Progress Section Label</label>
    <type>Text</type>
    <length>120</length>
</CustomField>