force-app/main/default/objects/Dashboard_Config__c/fields/Secondary_Color__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Color__c</fullName>
    <label>Secondary Color (hex)</label>
    <type>Text</type>
    <length>9</length>
    <description>Secondary brand color.</description>
</CustomField>