force-app/main/default/objects/Dashboard_Config__c/fields/Show_Business_Details__c.field-meta.xml
<CustomField>
    <fullName>Show_Business_Details__c</fullName>
    <label>Show Business Details</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>