force-app/main/default/objects/Dashboard_Config__c/fields/Show_Header__c.field-meta.xml
<CustomField>
    <fullName>Show_Header__c</fullName>
    <label>Show Header</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>