force-app/main/default/objects/Dashboard_Config__c/fields/Show_Progress__c.field-meta.xml
<CustomField>
    <fullName>Show_Progress__c</fullName>
    <label>Show Progress</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>